--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react-icons": "^4.9.0",
     "sass": "^1.63.4",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.12",
+    "typescript": "5.1.3"
   }
 }
